--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <nav>
             <div class="logo">
-                <img src="logo.png" alt="Unijorge Logo">
+                <img src="images/logo.png" alt="Unijorge Logo">
             </div>
             <ul>
                 <li><a href="#">A Unijorge</a></li>
