--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="#" class="btn">Saiba mais!</a>
             </div>
             <div class="hero-image">
-                <img src="scientists.jpg" alt="Cientistas">
+                <img src="images/scientists.png" alt="Cientistas">
             </div>
         </section>
 
